bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: '=' expected but ';' found.
var a=litMessage()
^BDR:8: error: ';' expected but 'else' found.
else if (a==C)
^BDR:12: error: ';' expected but 'else' found.
else if (a==R)
^BDR:15: error: ';' expected but 'else' found.
else if (a==L)
^BDR:18: error: ';' expected but 'else' found.
else if (a==I)
^BDR:22: error: ';' expected but 'else' found.
else if (a==Z)
^BDR:24: error: ';' expected but 'else' found.
else if(a==Y)
^BDR:27: error: ';' expected but 'else' found.
else if (a==X)
^BDR:31: error: ';' expected but 'else' found.
else 
^