bdr.BDR.scala.code
var fini
var a=litMessage()
if (a==A)
	avance()
else if (a==B)
	avance()
	avance()
else if (a==C)
	avance()
	avance()
	avance()
else if (a==R)
	droite()
	avance()
else if (a==L)
	gauche()
	avance()
else if (a==I)
	droite()
	droite()
	avance
else if (a==Z)
	recule()
else if(a==Y)
	recule()
	recule()
else if (a==X)
	recule()
	recule()
	recule()
else 
	stop